--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".PreferencesActivity"
+        <activity android:name=".SettingsActivity"
             android:label="@string/action_settings">
 
         </activity>
