--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
     compile 'com.android.support:recyclerview-v7:22.2.1'
     compile 'com.android.support:cardview-v7:22.2.1'
+    compile 'com.android.support:design:22.2.1'
     compile 'com.vanniktech:vntnumberpickerpreference:0.2.0-SNAPSHOT'
 }
