--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     compile 'com.vanniktech:vntnumberpickerpreference:0.2.0-SNAPSHOT'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.sothree.slidinguppanel:library:3.2.0'
+    testCompile 'junit:junit:4.11'
+    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
+    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.3.1'
 }
